[gd_scene load_steps=29 format=3 uid="uid://dc0w0dannprwp"]

[ext_resource type="Texture2D" uid="uid://b55od4jek8k57" path="res://Characters/Goblins/BomberGoblin/asstets/TNT_Blue.png" id="1_bpome"]
[ext_resource type="Script" path="res://Characters/Goblins/BomberGoblin/goblin.gd" id="1_ilqxl"]
[ext_resource type="Script" path="res://Scripts/state_machine/node_finite_state_machine.gd" id="2_wps71"]
[ext_resource type="Script" path="res://Characters/Goblins/BomberGoblin/states/move_state.gd" id="5_h8tml"]
[ext_resource type="Script" path="res://Characters/Goblins/BomberGoblin/states/attack_state.gd" id="5_me2o5"]

[sub_resource type="AtlasTexture" id="AtlasTexture_y1njt"]
atlas = ExtResource("1_bpome")
region = Rect2(0, 0, 192, 144)

[sub_resource type="AtlasTexture" id="AtlasTexture_8fej0"]
atlas = ExtResource("1_bpome")
region = Rect2(192, 0, 192, 144)

[sub_resource type="AtlasTexture" id="AtlasTexture_mj28b"]
atlas = ExtResource("1_bpome")
region = Rect2(384, 0, 192, 144)

[sub_resource type="AtlasTexture" id="AtlasTexture_i5bbr"]
atlas = ExtResource("1_bpome")
region = Rect2(576, 0, 192, 144)

[sub_resource type="AtlasTexture" id="AtlasTexture_84mix"]
atlas = ExtResource("1_bpome")
region = Rect2(768, 0, 192, 144)

[sub_resource type="AtlasTexture" id="AtlasTexture_ew72n"]
atlas = ExtResource("1_bpome")
region = Rect2(960, 0, 192, 144)

[sub_resource type="AtlasTexture" id="AtlasTexture_wbwvq"]
atlas = ExtResource("1_bpome")
region = Rect2(0, 230, 192, 115)

[sub_resource type="AtlasTexture" id="AtlasTexture_06d2k"]
atlas = ExtResource("1_bpome")
region = Rect2(192, 230, 192, 115)

[sub_resource type="AtlasTexture" id="AtlasTexture_c4tt3"]
atlas = ExtResource("1_bpome")
region = Rect2(384, 230, 192, 115)

[sub_resource type="AtlasTexture" id="AtlasTexture_y7o4t"]
atlas = ExtResource("1_bpome")
region = Rect2(576, 230, 192, 115)

[sub_resource type="AtlasTexture" id="AtlasTexture_61b5p"]
atlas = ExtResource("1_bpome")
region = Rect2(768, 230, 192, 115)

[sub_resource type="AtlasTexture" id="AtlasTexture_h067j"]
atlas = ExtResource("1_bpome")
region = Rect2(960, 230, 192, 115)

[sub_resource type="AtlasTexture" id="AtlasTexture_54e6r"]
atlas = ExtResource("1_bpome")
region = Rect2(576, 432, 192, 144)

[sub_resource type="AtlasTexture" id="AtlasTexture_886b0"]
atlas = ExtResource("1_bpome")
region = Rect2(768, 432, 192, 144)

[sub_resource type="AtlasTexture" id="AtlasTexture_ctpym"]
atlas = ExtResource("1_bpome")
region = Rect2(960, 432, 192, 144)

[sub_resource type="AtlasTexture" id="AtlasTexture_78c67"]
atlas = ExtResource("1_bpome")
region = Rect2(1152, 432, 192, 144)

[sub_resource type="AtlasTexture" id="AtlasTexture_513e8"]
atlas = ExtResource("1_bpome")
region = Rect2(0, 432, 192, 144)

[sub_resource type="AtlasTexture" id="AtlasTexture_wlb7k"]
atlas = ExtResource("1_bpome")
region = Rect2(192, 432, 192, 144)

[sub_resource type="AtlasTexture" id="AtlasTexture_wxair"]
atlas = ExtResource("1_bpome")
region = Rect2(384, 432, 192, 144)

[sub_resource type="SpriteFrames" id="SpriteFrames_l2iy8"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_y1njt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8fej0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mj28b")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i5bbr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_84mix")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ew72n")
}],
"loop": true,
"name": &"idle",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_wbwvq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_06d2k")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_c4tt3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_y7o4t")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_61b5p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_h067j")
}],
"loop": true,
"name": &"move",
"speed": 7.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_54e6r")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_886b0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ctpym")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_78c67")
}],
"loop": true,
"name": &"reload",
"speed": 7.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_513e8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wlb7k")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wxair")
}],
"loop": true,
"name": &"throw",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_kmeov"]
radius = 23.0

[sub_resource type="CircleShape2D" id="CircleShape2D_kld18"]
radius = 24.0

[sub_resource type="CircleShape2D" id="CircleShape2D_8sm0u"]
radius = 228.0

[node name="Goblin" type="CharacterBody2D"]
collision_layer = 8
collision_mask = 23
script = ExtResource("1_ilqxl")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(-1, -34)
sprite_frames = SubResource("SpriteFrames_l2iy8")
animation = &"idle"
frame_progress = 0.79315

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_kmeov")

[node name="HurtBox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtBox"]
shape = SubResource("CircleShape2D_kld18")
debug_color = Color(0.977497, 0.128722, 0.194641, 0.42)

[node name="StateMachine" type="Node" parent="." node_paths=PackedStringArray("initial_node_state")]
script = ExtResource("2_wps71")
initial_node_state = NodePath("MoveState")

[node name="MoveState" type="Node" parent="StateMachine" node_paths=PackedStringArray("character_body_2d", "animated_sprite_2d")]
script = ExtResource("5_h8tml")
character_body_2d = NodePath("../..")
animated_sprite_2d = NodePath("../../AnimatedSprite2D")
speed = 30.0

[node name="AttackState" type="Node" parent="StateMachine"]
script = ExtResource("5_me2o5")

[node name="IdleState" type="Node" parent="StateMachine"]

[node name="PlayerDetect" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerDetect"]
shape = SubResource("CircleShape2D_8sm0u")
debug_color = Color(0, 0.647677, 0.204275, 0.42)

[node name="Timer" type="Timer" parent="."]
wait_time = 4.0
